# SdeC_BJJ

./: ENTREGA #1 - TEÓRICO.MD  README.md
TP1/: ENTREGA #1 - Rendimiento.MD  ENTREGA#1_rendimiento.MD
TP1/Profiling/: analysis.txt  test_gprof
TP1/Profiling_Lopez/: analysis.txt
TP2/: ENTREGA#2.MD  ENTREGA#2_INFORME.MD
TP2/GINI/: CMakeLists.txt
TP2/GINI/api/: gini_api.py
TP2/GINI/c_assembler/: calcular_gini.c  gini_ops.asm
TP2/Stack_Frame/: CMakeLists.txt
TP2/Stack_Frame/api/: api.py
TP2/Stack_Frame/c_assembler/: main.c  operaciones.asm
TP3/: ENTREGA#3_INFORME.MD
TP3/4.Protected_mode/: protected_mode.asm  protected_mode.img
TP3/hello_world/: link.ld  main.S
TP4/: ENTREGA#4_INFORME.MD
TP4/firma-modulo-kernel/: Makefile  sign_key.priv  sign_key.x509  signed_module.c
TP5/: ENTREGA#5_INFORME.MD.md
TP5/signal-driver_TP/: Makefile  signal_plotter.py  signal_reader.py  signal_simulator.sh  signals.csv  signals2.csv  signals_driver.c
